{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 77,
  "lineage": "9275c43d-ad89-a2c4-1525-da8eb8a1c5fc",
  "resources": [
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_sg_ingress_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2684182340",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0267784f68b968fdb",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.master.aws_eks_cluster.eks_cluster",
            "module.master.aws_iam_role.eks_master_role",
            "module.master.aws_iam_role_policy_attachment.eks_cluster_cluster",
            "module.master.aws_iam_role_policy_attachment.eks_cluster_service",
            "module.network.aws_subnet.eks_subnet_private_1a",
            "module.network.aws_subnet.eks_subnet_private_1b",
            "module.network.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eks_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be0c4ea8eb8afaef",
            "domain": "vpc",
            "id": "eipalloc-0be0c4ea8eb8afaef",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-211-239-251.compute-1.amazonaws.com",
            "public_ip": "54.211.239.251",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "k8s-demo-elastic-ip"
            },
            "tags_all": {
              "Name": "k8s-demo-elastic-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816678621138:internet-gateway/igw-000a3e75412d14d54",
            "id": "igw-000a3e75412d14d54",
            "owner_id": "816678621138",
            "tags": {
              "Name": "k8s-demo-internet-gateway"
            },
            "tags_all": {
              "Name": "k8s-demo-internet-gateway"
            },
            "vpc_id": "vpc-062a6b8da32aeb184"
          },
          "dependencies": [
            "module.network.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "eks_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0be0c4ea8eb8afaef",
            "connectivity_type": "public",
            "id": "nat-05d575d12094462b3",
            "network_interface_id": "eni-0ec47c6ff3a404370",
            "private_ip": "10.0.3.214",
            "public_ip": "54.211.239.251",
            "subnet_id": "subnet-0e0e58172b7cac5e7",
            "tags": {
              "Name": "k8s-demo-nat-gateway"
            },
            "tags_all": {
              "Name": "k8s-demo-nat-gateway"
            }
          },
          "dependencies": [
            "module.network.aws_eip.eks_eip",
            "module.network.aws_subnet.eks_subnet_public_1a",
            "module.network.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_nat_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816678621138:route-table/rtb-02f70e7fe811e37f4",
            "id": "rtb-02f70e7fe811e37f4",
            "owner_id": "816678621138",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05d575d12094462b3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s-demo-private-rt"
            },
            "tags_all": {
              "Name": "k8s-demo-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-062a6b8da32aeb184"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.eks_eip",
            "module.network.aws_nat_gateway.eks_nat_gw",
            "module.network.aws_subnet.eks_subnet_public_1a",
            "module.network.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816678621138:route-table/rtb-0d2ab9238b0ffef41",
            "id": "rtb-0d2ab9238b0ffef41",
            "owner_id": "816678621138",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-000a3e75412d14d54",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s-demo-public-rt"
            },
            "tags_all": {
              "Name": "k8s-demo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-062a6b8da32aeb184"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.eks_ig",
            "module.network.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_private_rt_association_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cad08757d572647f",
            "route_table_id": "rtb-02f70e7fe811e37f4",
            "subnet_id": "subnet-0d08c1cb0851de800"
          },
          "dependencies": [
            "module.network.aws_eip.eks_eip",
            "module.network.aws_nat_gateway.eks_nat_gw",
            "module.network.aws_route_table.eks_nat_rt",
            "module.network.aws_subnet.eks_subnet_private_1a",
            "module.network.aws_subnet.eks_subnet_public_1a",
            "module.network.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_private_rt_association_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ceee9c44e281edbc",
            "route_table_id": "rtb-02f70e7fe811e37f4",
            "subnet_id": "subnet-07b36d81453e7a823"
          },
          "dependencies": [
            "module.network.aws_eip.eks_eip",
            "module.network.aws_nat_gateway.eks_nat_gw",
            "module.network.aws_route_table.eks_nat_rt",
            "module.network.aws_subnet.eks_subnet_private_1b",
            "module.network.aws_subnet.eks_subnet_public_1a",
            "module.network.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_public_rt_association_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06991842fcc9f32b4",
            "route_table_id": "rtb-0d2ab9238b0ffef41",
            "subnet_id": "subnet-0e0e58172b7cac5e7"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.eks_ig",
            "module.network.aws_route_table.eks_public_rt",
            "module.network.aws_subnet.eks_subnet_public_1a",
            "module.network.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_public_rt_association_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050a35d0cb2869092",
            "route_table_id": "rtb-0d2ab9238b0ffef41",
            "subnet_id": "subnet-0729fcd565b87ca3f"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.eks_ig",
            "module.network.aws_route_table.eks_public_rt",
            "module.network.aws_subnet.eks_subnet_public_1b",
            "module.network.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_subnet_private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816678621138:subnet/subnet-0d08c1cb0851de800",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d08c1cb0851de800",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816678621138",
            "tags": {
              "Name": "k8s-demo-subnet-private-1a",
              "kubernetes.io/cluster/k8s-demo": "shared"
            },
            "tags_all": {
              "Name": "k8s-demo-subnet-private-1a",
              "kubernetes.io/cluster/k8s-demo": "shared"
            },
            "vpc_id": "vpc-062a6b8da32aeb184"
          },
          "dependencies": [
            "module.network.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_subnet_private_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816678621138:subnet/subnet-07b36d81453e7a823",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-07b36d81453e7a823",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "816678621138",
            "tags": {
              "Name": "k8s-demo-subnet-private-1b",
              "kubernetes.io/cluster/k8s-demo": "shared"
            },
            "tags_all": {
              "Name": "k8s-demo-subnet-private-1b",
              "kubernetes.io/cluster/k8s-demo": "shared"
            },
            "vpc_id": "vpc-062a6b8da32aeb184"
          },
          "dependencies": [
            "module.network.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_subnet_public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816678621138:subnet/subnet-0e0e58172b7cac5e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0e0e58172b7cac5e7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "816678621138",
            "tags": {
              "Name": "k8s-demo-subnet-public-1a",
              "kubernetes.io/cluster/k8s-demo": "shared"
            },
            "tags_all": {
              "Name": "k8s-demo-subnet-public-1a",
              "kubernetes.io/cluster/k8s-demo": "shared"
            },
            "vpc_id": "vpc-062a6b8da32aeb184"
          },
          "dependencies": [
            "module.network.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_subnet_public_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816678621138:subnet/subnet-0729fcd565b87ca3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0729fcd565b87ca3f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "816678621138",
            "tags": {
              "Name": "k8s-demo-subnet-public-1b",
              "kubernetes.io/cluster/k8s-demo": "shared"
            },
            "tags_all": {
              "Name": "k8s-demo-subnet-public-1b",
              "kubernetes.io/cluster/k8s-demo": "shared"
            },
            "vpc_id": "vpc-062a6b8da32aeb184"
          },
          "dependencies": [
            "module.network.aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:816678621138:vpc/vpc-062a6b8da32aeb184",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-084b8d78d3a86caca",
            "default_route_table_id": "rtb-0dffdd01d1ba062cb",
            "default_security_group_id": "sg-0401c20232ef34ba4",
            "dhcp_options_id": "dopt-3f796e45",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-062a6b8da32aeb184",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0dffdd01d1ba062cb",
            "owner_id": "816678621138",
            "tags": {
              "Name": "k8s-demo-vpc"
            },
            "tags_all": {
              "Name": "k8s-demo-vpc"
            }
          }
        }
      ]
    }
  ]
}